[project]
name = "dbx-llm"
version = "0.1.0"
description = "Portable library + CLI to chat with Databricks-hosted models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.30",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dbx-llm = "dbx_llm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbx_llm"]
